WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268593
[WebGPU] ThreeJS video samples fail MSL compilation
https://bugs.webkit.org/show_bug.cgi?id=268593
Summary
[WebGPU] ThreeJS video samples fail MSL compilation
Mike Wyrzykowski
Reported
2024-02-01 18:03:35 PST
Open
https://threejs.org/examples/?q=webgpu#webgpu_materials_video
or
https://threejs.org/examples/?q=webgpu#webgpu_video_panorama
Note the following errors: MSL compilation error: Error Domain=MTLLibraryErrorDomain Code=3 "program_source:77:32: error: use of undeclared identifier '__ArgumentBuffer_0' texture_external global1 { __ArgumentBuffer_0.__global1_FirstPlane, __ArgumentBuffer_0.__global1_SecondPlane, __ArgumentBuffer_0.__global1_UVRemapMatrix, __ArgumentBuffer_0.__global1_ColorSpaceConversionMatrix }; it doesn't appear the AB is in the function parameters: [[fragment]] __type1_FragmentOutput function1(__function1_inT __function1_in [[stage_in]]) { type1 global3 { }; texture_external global1 { __ArgumentBuffer_0.__global1_FirstPlane, __ArgumentBuffer_0.__global1_SecondPlane, __ArgumentBuffer_0.__global1_UVRemapMatrix, __ArgumentBuffer_0.__global1_ColorSpaceConversionMatrix };
Attachments
WGSL source
(6.39 KB, text/plain)
2024-02-01 18:07 PST
,
Mike Wyrzykowski
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-01 18:03:49 PST
<
rdar://problem/122146692
>
Mike Wyrzykowski
Comment 2
2024-02-01 18:07:19 PST
Created
attachment 469667
[details]
WGSL source
Mike Wyrzykowski
Comment 3
2024-02-01 19:39:01 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23718
EWS
Comment 4
2024-02-02 01:11:56 PST
Committed
273981@main
(375a8ba0743f): <
https://commits.webkit.org/273981@main
> Reviewed commits have been landed. Closing PR #23718 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug