[WebGPU] ThreeJS video samples fail MSL compilation https://bugs.webkit.org/show_bug.cgi?id=268593 <radar://122146692>

Reviewed by Tadeu Zagallo.

ExternalTextures should have Handle AccessMode, not Uniform.

* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::addressSpaceForBindingMember):

Canonical link: https://commits.webkit.org/273981@main